--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+server.port=8080
+spring.datasource.url=jdbc:mariadb://localhost:3306/teeshop?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=235917
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
