--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.datasource.url=jdbc:mariadb://localhost:3306/teeshop?useSSL=false
+spring.datasource.url=jdbc:mariadb://localhost:3306/amazon?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=235917
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
